--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
           <b>Address:</b> 5 South Zhongguancun Street, Haidian District, Beijing, China
         </p>
         <p>
-          <a href="https://www.semanticscholar.org/author/Jianyu-Wang/2290025108" class="btn btn-primary" target="_blank">Semantic Scholar</a>
-          <!-- <a href="https://scholar.google.com/citations?user=IZHivHEAAAAJ&hl" class="btn btn-primary" target="_blank">Google Scholar</a> -->
+          <!-- <a href="https://www.semanticscholar.org/author/Jianyu-Wang/2290025108" class="btn btn-primary" target="_blank">Semantic Scholar</a> -->
+          <a href="https://scholar.google.com/citations?user=IZHivHEAAAAJ&hl" class="btn btn-primary" target="_blank">Google Scholar</a>
           <a href="https://github.com/jianyu03" class="btn btn-dark" target="_blank">Github</a>
           <!-- <a href="./cv/Jianyu_Wang_s_CV_CN.pdf" class="btn btn-secondary" target="_blank">CV</a> -->
         </p>
