--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
           <!-- <a href="https://www.semanticscholar.org/author/Jianyu-Wang/2290025108" class="btn btn-primary" target="_blank">Semantic Scholar</a> -->
           <a href="https://scholar.google.com/citations?user=IZHivHEAAAAJ&hl" class="btn btn-primary" target="_blank">Google Scholar</a>
           <a href="https://github.com/jianyu03" class="btn btn-dark" target="_blank">Github</a>
+          <a href="https://orcid.org/0009-0004-1489-2756" class="btn btn-secondary" target="_blank">ORCID</a>
           <!-- <a href="./cv/Jianyu_Wang_s_CV_CN.pdf" class="btn btn-secondary" target="_blank">CV</a> -->
         </p>
       </div>
